# FP

./: README.md
FP_1/: CMakeLists.txt  main.c
FP_1/Part1/: p1ex1.c  p1ex2.c  p1ex3.c  p1ex4.c  p1ex5.c
FP_1/Part2/: p2ex1.c  p2ex2.c  p2ex3.c  p2ex4.c  p2ex5.c
FP_1/Part3/: p3ex1.c
FP_2/: CMakeLists.txt  main.c
FP_2/Part1/: p1ex1.c  p1ex2.c  p1ex3.c  p1ex4.c  p1ex5.c
FP_2/Part2/: p2ex1.c  p2ex2.c  p2ex3.c  p2ex4.c  p2ex5.c
FP_2/Part3/: p3ex1.c
