cmake_minimum_required(VERSION 3.26)
project(FP_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(FP_1 main.c
        Part1/p1ex1.c
        Part1/p1ex2.c
        Part1/p1ex3.c
        Part1/p1ex4.c
        Part1/p1ex5.c
        Part2/p2ex1.c
        Part2/p2ex2.c
        Part2/p2ex3.c
        Part2/p2ex4.c
        Part2/p2ex5.c
        Part3/p3ex1.c)
